[gd_scene load_steps=9 format=2]

[ext_resource path="res://ground.tres" type="TileSet" id=1]
[ext_resource path="res://buildings.tres" type="TileSet" id=2]
[ext_resource path="res://Human.gd" type="Script" id=3]
[ext_resource path="res://sprites/player_human.png" type="Texture" id=4]
[ext_resource path="res://sounds/bullet.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/harvest.wav" type="AudioStream" id=6]
[ext_resource path="res://Blob.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="World" type="Node2D"]

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 524288
collision_mask = 7
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 1, 0, 720904, 1, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0 )

[node name="Buildings" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( 65547, 536870928, 0, 65548, 16, 0, 65549, 16, 0, 65551, 536870928, 0, 65552, 16, 0, 65553, 16, 0, 65554, 536870928, 0, 131083, 16, 0, 131085, 536870928, 0, 131086, 536870928, 0, 131087, 536870928, 0, 131088, 16, 0, 131089, 536870928, 0, 131090, 536870928, 0, 131091, 6, 0, 131092, 16, 0, 196625, 16, 0, 196626, 16, 0, 196627, 6, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 15, 0, 262157, 5, 0, 262160, 11, 0, 262161, 5, 0, 262162, 5, 0, 262163, 13, 0, 327692, 6, 0, 327693, 1, 0, 327694, 2, 0, 327696, 6, 0, 327697, 536870912, 0, 327698, 0, 0, 327699, 6, 0, 327700, 536870928, 0, 393228, 6, 0, 393229, 3, 0, 393230, 4, 0, 393232, 6, 0, 393233, 536870912, 0, 393234, 0, 0, 393235, 6, 0, 393236, 16, 0, 458764, 6, 0, 458766, 6, 0, 458768, 6, 0, 458769, 536870912, 0, 458770, 0, 0, 458771, 6, 0, 458772, 536870928, 0, 524300, 6, 0, 524301, 8, 0, 524302, 12, 0, 524303, 5, 0, 524304, 12, 0, 524305, 5, 0, 524306, 5, 0, 524307, 9, 0, 524308, 16, 0, 589836, 10, 0, 589837, 13, 0, 589839, 16, 0, 589840, 536870928, 0, 589841, 16, 0, 655371, 536870928, 0, 655372, 16, 0, 655373, 6, 0, 655375, 16, 0, 655376, 536870928, 0, 655378, 16, 0, 720906, 16, 0, 720907, 16, 0, 720908, 536870928, 0, 720909, 11, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720914, 16, 0 )

[node name="Human" type="KinematicBody2D" parent="."]
position = Vector2( 183.482, 108.04 )
collision_layer = 2
collision_mask = 524309
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Human"]
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Human"]
current = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_drag_margin = true

[node name="Collision" type="CollisionShape2D" parent="Human"]
shape = SubResource( 1 )

[node name="BulletSound" type="AudioStreamPlayer2D" parent="Human"]
stream = ExtResource( 5 )

[node name="HarvestRaycast" type="RayCast2D" parent="Human"]
cast_to = Vector2( 0, 16 )

[node name="HarvestSound" type="AudioStreamPlayer2D" parent="Human"]
stream = ExtResource( 6 )
volume_db = -3.199
attenuation = 0.757858

[node name="HarvestLine" type="Line2D" parent="Human"]
width = 1.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="BlobController" type="Node2D" parent="."]

[node name="Blobs" type="Node2D" parent="BlobController"]

[node name="Blob" parent="BlobController/Blobs" instance=ExtResource( 7 )]
position = Vector2( 328, 168 )

[node name="Creeps" type="Node2D" parent="BlobController"]
